# qt-material-widgets

./: CMakeLists.txt  README.md  qt-material-widgets.pro
components/: CMakeLists.txt  components.pro  qtmaterialappbar.cpp  qtmaterialappbar.h  qtmaterialappbar_p.h  qtmaterialappbarbehavior.cpp  qtmaterialappbarbehavior.h  qtmaterialappbarstatelayer.cpp  qtmaterialappbarstatelayer.h  qtmaterialappbarstatelayer_p.h  qtmaterialassistchip.cpp  qtmaterialassistchip.h  qtmaterialassistchip_p.h  qtmaterialautocomplete.cpp  qtmaterialautocomplete.h  qtmaterialautocomplete_p.h  qtmaterialbadge.cpp  qtmaterialbadge.h  qtmaterialbadge_p.h  qtmaterialbadgedecorator.cpp  qtmaterialbadgedecorator.h  qtmaterialbadgedecorator_p.h  qtmaterialbanner.cpp  qtmaterialbanner.h  qtmaterialbanner_p.h  qtmaterialbottomappbar.cpp  qtmaterialbottomappbar.h  qtmaterialbottomappbar_p.h  qtmaterialbottomsheet.cpp  qtmaterialbottomsheet.h  qtmaterialbottomsheet_p.h  qtmaterialbuttongroup.cpp  qtmaterialbuttongroup.h  qtmaterialbuttongroup_p.h  qtmaterialcarousel.cpp  qtmaterialcarousel.h  qtmaterialcarousel_p.h  qtmaterialcenteredslider.cpp  qtmaterialcenteredslider.h  qtmaterialcenteredslider_p.h  (+202 more)
components/layouts/: qtmaterialsnackbarlayout.cpp  qtmaterialsnackbarlayout.h  qtmaterialsnackbarlayout_p.h
examples/: CMakeLists.txt  appbarbehaviorsettingseditor.cpp  appbarbehaviorsettingseditor.h  appbarstatelaysettingseditor.cpp  appbarstatelaysettingseditor.h  autocompletesettingseditor.cpp  autocompletesettingseditor.h  badgesettingseditor.cpp  badgesettingseditor.h  bannersettingseditor.cpp  bannersettingseditor.h  bottomappbarsettingseditor.cpp  bottomappbarsettingseditor.h  bottomsheetsettingseditor.cpp  bottomsheetsettingseditor.h  bottomsheetvariantssettingseditor.cpp  bottomsheetvariantssettingseditor.h  buttongroupsettingseditor.cpp  buttongroupsettingseditor.h  carouselsettingseditor.cpp  carouselsettingseditor.h  centeredslidersettingseditor.cpp  centeredslidersettingseditor.h  chipsettingseditor.cpp  chipsettingseditor.h  chipvariantssettingseditor.cpp  chipvariantssettingseditor.h  connectedbuttongroupsettingseditor.cpp  connectedbuttongroupsettingseditor.h  datepickervariantssettingseditor.cpp  datepickervariantssettingseditor.h  daterangepickersettingseditor.cpp  daterangepickersettingseditor.h  datetimepickersettingseditor.cpp  datetimepickersettingseditor.h  dividersettingseditor.cpp  dividersettingseditor.h  dividersettingsform.ui  examples.pro  examples.pro.bak  (+91 more)
tests/: CMakeLists.txt  tests.pro
tests/test_qtmaterialcheckbox/: CMakeLists.txt  test_qtmaterialcheckbox.cpp  test_qtmaterialcheckbox.pro
tests/test_qtmateriallist/: CMakeLists.txt  test_qtmateriallist.cpp  test_qtmateriallist.pro
tests/test_qtmateriallistitem/: CMakeLists.txt  test_qtmateriallistitem.cpp  test_qtmateriallistitem.pro
tests/test_qtmaterialtable/: CMakeLists.txt  test_qtmaterialtable.cpp  test_qtmaterialtable.pro
tests/test_qtmaterialtextfield/: CMakeLists.txt  test_qtmaterialtextfield.cpp  test_qtmaterialtextfield.pro
tests/test_qtmaterialtoggle/: CMakeLists.txt  test_qtmaterialtoggle.cpp  test_qtmaterialtoggle.pro
